--- a/index.html
+++ b/index.html
@@ -30,12 +30,39 @@
       <section id="main_content">
         <h1>Stan-Derp the flexible Python IRC Bot</h1>
 
-<p>Stan-Derp (Or known as Stan-Lee on #L @ irc.esper.net) is a open source python IRC bot forked from Phenny, with new modules, easier to understand commands, and easy installation! Stan-Derp can run on any operating system that supports Python 2.4 or higher.</p>
+<p>Stan-Derp (Or known as Code on #L @ irc.esper.net) is a open source python IRC bot forked from Phenny/Jenni, with new modules, easier to understand commands, and easy installation! Stan-Derp can run on any operating system that supports Python 2.4 or higher.</p>
 
-<p>For more information, configuration, and installation instructions, please visit <a href="http://standerp.liamstanley.net">http://standerp.liamstanley.net</a></p>
+<h2>Features</h2>
 
-<p>Installation: <a href="http://standerp.liamstanley.net/#install">http://standerp.liamstanley.net/#install</a>
-Configuration <a href="http://standerp.liamstanley.net/#config">http://standerp.liamstanley.net/#config</a></p>
+<hr><p>Stan-Derp is packed full of features ranging from raw IRC functions to modules that can be unloaded and loaded with ease. Some features include:</p>
+
+<p>Fast &amp; Light Weight</p>
+
+<ul>
+<li>Stan-Derp is very small, so it won't take up resources. Also, Stan-Derp is very responsive and quick-paced! Also he can run in 1-2 processes!</li>
+</ul><p>Load &amp; Unload Modules</p>
+
+<ul>
+<li>Stan-Derp has the ability to load user defined IRC modules, that are pre-made or ones that you create. Stan-Derp also can live-reload modules for active and fast development.</li>
+</ul><p>Very User Friendly</p>
+
+<ul>
+<li>It is very easy to install and run Stan-Derp, even if you have no knowledge of ever running a IRC bot before. ".help" commands, and friendly responses help everything feel smooth and elegant.</li>
+</ul><p>Easy-To-use API</p>
+
+<ul>
+<li>When creating your own modules, it is always very easy to have a fully documented API and easy to understand functions.</li>
+</ul><p>Open-Source</p>
+
+<ul>
+<li>Found a bug, feature, or technical support/advice? You can always navigate to the <a href="https://github.com/Liamraystanley/Stan-Derp">Github</a> page to make requests and post bugs. Heck, even fork Stan-Derp as your own and make your own modifications!</li>
+</ul><p>Configuration</p>
+
+<ul>
+<li>By default, Stan-Derp has the ability to change his username (including NickServ Authentication), server (including server password), and excluded channel/modules.</li>
+</ul><h2>Information</h2>
+
+<hr><p>For more information, configuration, and installation instructions, please visit <a href="http://standerp.liamstanley.net">http://standerp.liamstanley.net</a></p>
 
 <p>for rss.py to work, install feedparser via your pip/yum/other package installer.</p>
 
