--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>Stan-derp by Liamraystanley</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1 class="header">Stan-derp</h1>
+        <p class="header">Stan-Derp - Python IRC Bot</p>
 
-    <header>
-      <div class="container">
-        <h1>Stan-derp</h1>
-        <h2>Stan-Derp - Python IRC Bot</h2>
+        <ul>
+          <li class="download"><a class="buttons" href="https://github.com/Liamraystanley/Stan-Derp/zipball/master">Download ZIP</a></li>
+          <li class="download"><a class="buttons" href="https://github.com/Liamraystanley/Stan-Derp/tarball/master">Download TAR</a></li>
+          <li><a class="buttons github" href="https://github.com/Liamraystanley/Stan-Derp">View On GitHub</a></li>
+        </ul>
 
-        <section id="downloads">
-          <a href="https://github.com/Liamraystanley/Stan-Derp/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/Liamraystanley/Stan-Derp/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/Liamraystanley/Stan-Derp" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
+        <p class="header">This project is maintained by <a class="header name" href="https://github.com/Liamraystanley">Liamraystanley</a></p>
 
-    <div class="container">
-      <section id="main_content">
+
+      </header>
+      <section>
         <h1>Stan-Derp the flexible Python IRC Bot</h1>
 
 <p>Stan-Derp (Or known as Code on #L @ irc.esper.net) is a open source python IRC bot forked from Phenny/Jenni, with new modules, easier to understand commands, and easy installation! Stan-Derp can run on any operating system that supports Python 2.4 or higher.</p>
@@ -82,8 +84,11 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see &lt;http://www.gnu.org/licenses/&gt;.
 </code></pre>
       </section>
+      <footer>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+      </footer>
     </div>
-
-    
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+		
   </body>
 </html>
